# camt-to-erpnext

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yaml
camt_to_erpnext/: __main__.py  main.py
tests/: test_main.py
