[tool.poetry]
name = "camt-to-erpnext"
version = "0.2.2"
description = "Convert a CAMT CSV file into a normal CSV file that can be used for importing Bank Transactions into ERPNext."
repository = "https://github.com/barredterra/camt-to-erpnext"
authors = ["barredterra <14891507+barredterra@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "camt_to_erpnext"}]
classifiers = [
    "Topic :: Office/Business :: Financial :: Accounting",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: German"
]

[tool.poetry.scripts]
camt-to-erpnext = "camt_to_erpnext.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
